[gd_scene load_steps=3 format=3 uid="uid://b0df8jqv2q5bg"]

[ext_resource type="Script" path="res://src/ui-components/player-list/player-row/player_row.gd" id="1_4bbf8"]
[ext_resource type="PackedScene" uid="uid://bp0lflrwwki6x" path="res://src/ui-components/player-list/table/name-label/name_label.tscn" id="2_1q6ka"]

[node name="PlayerRow" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4bbf8")

[node name="NameLabel" parent="." instance=ExtResource("2_1q6ka")]
layout_mode = 2

[node name="PositionLabel" parent="." instance=ExtResource("2_1q6ka")]
custom_minimum_size = Vector2(64, 36)
layout_mode = 2

[node name="Attributes" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="Button" parent="."]
layout_mode = 2
text = "INFO"

[node name="Select" type="Button" parent="."]
layout_mode = 2
text = "SELECT"

[connection signal="pressed" from="Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
